feat: add comprehensive content for missing topics from RFG.docx
New content files (38 new/modified, EN + VI):

Spring Boot:
- spring-core.md: IoC, ApplicationContext vs BeanFactory, DI, Bean lifecycle, AOP (Aspect, Advice, JoinPoint, Pointcut, Weaving)
- spring-batch.md: Job/Step/Flow, ItemReader/Processor/Writer, Chunk processing, Skip/Retry, Scheduling, Partitioning
- spring-cloud.md: Eureka/Consul, API Gateway, Config, Circuit Breaker (Resilience4j), Distributed Tracing (Sleuth+Zipkin), ELK Logging
- spring-actuator-monitoring.md: Endpoints, custom health indicators, Prometheus/Grafana, Micrometer

Java Core:
- java-core/versions.md: Java 8/11/17/21 features (Records, Sealed Classes, Virtual Threads, Pattern Matching)
- java-core/jvm-gc.md: JVM Memory Structure, GC Algorithms (Serial, Parallel, CMS, G1GC, ZGC, Shenandoah), JVM Tuning
- java-core/concurrency.md: Fork/Join, CompletableFuture, Livelock, Semaphore, CountDownLatch, CyclicBarrier, Phaser
- java-core/memory-management.md: Stack vs Heap, Reference types, Memory leaks, Escape analysis, Metaspace

Database:
- mybatis.md: XML/Interface Mapper, Dynamic SQL, TypeHandlers, Transaction management
- database-migration.md: Flyway, Liquibase, version-based vs state-based migration
- sharding-partitioning.md: Horizontal/Vertical partitioning, Sharding strategies, Cross-shard challenges
- replication-ha.md: Master-Slave/Master-Master, Failover, Raft/Paxos, Split-brain
- backup-recovery.md: Logical/Physical backup, PITR, RTO/RPO, Cloud backup

System Design:
- message-queue-main.md: Kafka, RabbitMQ, SQS, patterns (point-to-point, pub/sub), DLQ, comparison

DevOps:
- helm.md: Chart structure, templating, hooks, repositories
- infrastructure-as-code.md: Terraform (providers, state, modules), Ansible (playbooks, roles)
- deployment-strategies.md: Rolling, Blue-Green, Canary, Feature Flags, A/B Testing
- monitoring-logging.md: Prometheus, Grafana, SLI/SLO/SLA, ELK Stack, Loki, OpenTelemetry
- jenkins.md: Master/Agent, J